<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_cream"
    android:padding="@dimen/padding_main"
    tools:context=".LoginActivity">

    <!-- logo -->
    <ImageView
        android:id="@+id/logoApp"
        android:layout_width="@dimen/pet_image_size"
        android:layout_height="@dimen/pet_image_size"
        android:src="@drawable/ic_logo_splash"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/padding_main"/>

    <!-- titulo -->
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/primary_green"
        android:textSize="@dimen/text_size_name"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logoApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top_small"/>

    <TextView
        android:id="@+id/textIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_bottom_large"/>

    <!-- email -->
    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_history"
        app:layout_constraintTop_toBottomOf="@id/textIniciarSesion"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_bottom_large"/>

    <EditText
        android:id="@+id/editCorreo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/border_history"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="@dimen/padding_history"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/labelEmail"
        android:layout_marginTop="@dimen/margin_top_small"/>

    <!-- contraseña -->
    <TextView
        android:id="@+id/labelPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_password"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_history"
        app:layout_constraintTop_toBottomOf="@id/editCorreo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_bottom_medium"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/border_history"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/padding_history"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/labelPassword"
        android:layout_marginTop="@dimen/margin_top_small"/>

    <TextView
        android:id="@+id/textRecuperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_recover_password"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_button_small"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/editPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top_small"/>

    <!-- bot ingresar -->
    <Button
        android:id="@+id/botonLogin"
        android:layout_width="200dp"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/bg_boton_verde"
        android:text="@string/btn_ingresar"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_body"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textRecuperar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_bottom_large"/>

    <TextView
        android:id="@+id/botonRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_register"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_button"
        app:layout_constraintTop_toBottomOf="@id/botonLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_bottom_large"/>

    <!-- ProgressBar p/ firebase (oculta) -->
    <ProgressBar
        android:id="@+id/barraProgreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/botonRegistro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_bottom_medium"/>

</androidx.constraintlayout.widget.ConstraintLayout>