<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_cream"
    android:padding="@dimen/padding_main"
    tools:context=".RegisterActivity">

    <!-- titulo -->
    <TextView
        android:id="@+id/textRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_register"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/padding_top_main"/>

    <!-- nombre -->
    <TextView
        android:id="@+id/labelNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nombre"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_history"
        app:layout_constraintTop_toBottomOf="@id/textRegistro"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_bottom_large"/>

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/border_history"
        android:inputType="textPersonName"
        android:paddingHorizontal="@dimen/padding_history"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/labelNombre"
        android:layout_marginTop="@dimen/margin_top_small"/>

    <!-- email -->
    <TextView
        android:id="@+id/labelEmailReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_history"
        app:layout_constraintTop_toBottomOf="@id/editNombre"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_bottom_medium"/>

    <EditText
        android:id="@+id/editCorreoReg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/border_history"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="@dimen/padding_history"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/labelEmailReg"
        android:layout_marginTop="@dimen/margin_top_small"/>

    <!-- contraseña -->
    <TextView
        android:id="@+id/labelPasswordReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_password"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_history"
        app:layout_constraintTop_toBottomOf="@id/editCorreoReg"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_bottom_medium"/>

    <EditText
        android:id="@+id/editPasswordReg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/border_history"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/padding_history"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/labelPasswordReg"
        android:layout_marginTop="@dimen/margin_top_small"/>

    <!-- registrarse -->
    <Button
        android:id="@+id/botonRegistrar"
        android:layout_width="200dp"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/bg_boton_verde"
        android:text="@string/btn_registrarse"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_body"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/editPasswordReg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_bottom_large"/>

    <TextView
        android:id="@+id/textVolverLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_back_login"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_button"
        app:layout_constraintTop_toBottomOf="@id/botonRegistrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_bottom_large"/>

    <ProgressBar
        android:id="@+id/barraProgresoReg"
        android:layout_width="2dp"
        android:layout_height="4dp"
        android:layout_marginTop="@dimen/margin_bottom_medium"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textVolverLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>